--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4991,6 +4991,13 @@ button.bg-danger:focus {
 .bg-light {
   background-color: #f8f9fa !important; }
 
+.bg-separuh{
+  background-color: #ffffff;
+}
+/* .bg-login{
+  background-color: #ffcccc;
+} */
+
 a.bg-light:hover, a.bg-light:focus,
 button.bg-light:hover,
 button.bg-light:focus {
